tests/success/generic_resolve_type.bz
struct generic_t<T: typename>
{
	.p: *T;
}

@symbol_name("get_generic") function get_generic() -> generic_t<int32>
{
	unreachable;
}
