tests/error/ambiguous_typename_func.bz
function foo(T: *typename, U: typename);
function foo(T: typename, U: *typename);

function main()
{
	foo(*int32, *int32);
}
